# SEABeacon-Regional-Disaster-Alert-System

./: .gitattributes  README.md  docker-compose.yml  esp-idf-examples.code-workspace  neuralcube_f2l_dataset.csv  package-lock.json  pca_transformed_data.csv  transmitted_column.sql
HCIA-AI V4.0 LAB/: load_mnist.py  train_mnist.py
artifacts/: feature_metadata.json  pca_transformer.joblib  scaler.joblib  svm_classifier.joblib
backend/: Dockerfile  pyproject.toml
backend/seabeacon/: config.py  main.py  schemas.py
backend/seabeacon/bot/: dispatcher.py  telegram_bot.py
backend/seabeacon/fixtures/: kammuri_signals.json  kammuri_track.json
backend/seabeacon/routes/: alerts.py  events.py  scenarios.py
backend/seabeacon/services/: localization.py  propagation.py  scenario_clock.py
backend/tests/: test_propagation.py
data_extraction/: 01_data_extraction.ipynb
demo/: .gitignore  README.md
demo/frontend/: package.json
frontend/: Dockerfile  package-lock.json  tailwind.config.ts
frontend/app/: page.tsx
frontend/components/: ScenarioControls.tsx
frontend/lib/: ws.ts
frontend/styles/: globals.css
my-map-app/: index.html  package-lock.json  package.json
my-map-app/src/: App.jsx  MapPanel.jsx  SEABeacon.jsx
phase1/: .gitignore
phase1/app/: README.md
phase1/demo2/: README.md  run_all.ps1  run_all.sh
phase1/lstm_model/: .env.example  .gitattributes  .gitignore  (+13 more)
progressReport_automation/: .env  Master_Template.docx  generate_report.py  requirements.txt  run.bat  run.ps1
supabase/: seabeacon_reports_table.sql
xgboost_forecast/: main.py  test.py
(+112 files in other folders)
