[project]
name = "seabeacon"
version = "0.1.0"
description = "SEABeacon — cross-border disaster early-warning demo for ASEAN."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "python-telegram-bot>=21.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "jinja2>=3.1",
    "httpx>=0.27",
    "sse-starlette>=2.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["seabeacon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
